--- a/index.html
+++ b/index.html
@@ -10,23 +10,31 @@
 <body>
     <div class="urna">
         <div class="tela">fgfdgfdg</div>
-        <div class="teclado">
+        <div class="lado-direito">
             <header>
+                <img src="img/brasao.gif" alt="Brasao Nacional">
+                <div><p>JUSTIÇA</p><p>ELEITORAL</p></div>
             </header>
-            <div class="botoes">
-                <div class="numeros linha1">1</div>
-                <div class="numeros linha2">2</div>
-                <div class="numeros linha3">3</div>
-                <div class="numeros linha4">4</div>
-                <div class="numeros linha5">5</div>
-                <div class="numeros linha6">6</div>
-                <div class="numeros linha7">7</div>
-                <div class="numeros linha8">8</div>
-                <div class="numeros linha9">9</div>
-                <div class="numeros linha10">0</div>
-                <div class="numeros linha11">BRANCO</div>
-                <div class="numeros linha12">CORRIGE</div>
-                <div class="numeros linha13">CONFIRMAR</div>
+            <div class="teclado">
+                <div class="teclado-numeros">
+                    <div class="botoes">
+                        <div class="numeros linha1">1</div>
+                        <div class="numeros linha2">2</div>
+                        <div class="numeros linha3">3</div>
+                        <div class="numeros linha4">4</div>
+                        <div class="numeros linha5">5</div>
+                        <div class="numeros linha6">6</div>
+                        <div class="numeros linha7">7</div>
+                        <div class="numeros linha8">8</div>
+                        <div class="numeros linha9">9</div>
+                        <div class="numeros linha10">0</div>
+                    </div>
+                </div>
+                <div class="teclado-acoes">
+                    <div class="branco">BRANCO</div>
+                    <div class="laranja">CORRIGE</div>
+                    <div class="verde">CONFIRMAR</div>
+                </div>
             </div>
         </div>
     </div>
