--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
     <div class="urna">
-        <div class="tela">fgfdgfdg</div>
+        <div class="tela">
+            <div class="d-1"></div>
+            <div class="d-2">
+                Aperte a tela: <br>
+                CONFIRMAR para CONFIRMAR este voto <br>
+                CORRIGE para REINICIAR este voto
+            </div>
+        </div>
         <div class="lado-direito">
             <header>
                 <img src="img/brasao.gif" alt="Brasao Nacional">
