--- a/index.html
+++ b/index.html
@@ -10,7 +10,25 @@
 <body>
     <div class="urna">
         <div class="tela">
-            <div class="d-1"></div>
+            <div class="d-1">
+                <div class="d-1-esquerda">
+                    <div class="d-1-1">
+                        <span>SEU VOTO PARA</span>
+                    </div>
+                    <div class="d-1-2">
+                        <span>VEREADOR</span>
+                    </div>
+                    <div class="d-1-3">
+                        .....
+                    </div>
+                    <div class="d-1-4">
+                       <p>Nome: FULANO DE TAL</p>
+                       <p>Partido: QQQ</p>
+                        <p>Vice-Prefeito: BELTRANO DE TAL</p>
+                    </div>
+                </div>
+                <div class="d-1-direita">fdfd</div>
+            </div>
             <div class="d-2">
                 Aperte a tela: <br>
                 CONFIRMAR para CONFIRMAR este voto <br>
