--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                         <span>VEREADOR</span>
                     </div>
                     <div class="d-1-3">
-                        .....
+                        <div class="numero"></div>
+                        <div class="numero"></div>
                     </div>
                     <div class="d-1-4">
                        <p>Nome: FULANO DE TAL</p>
