--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/animation.css">
     <title>Urna Eletrôonica</title>
 </head>
 <body>
@@ -19,8 +20,8 @@
                         <span>VEREADOR</span>
                     </div>
                     <div class="d-1-3">
-                        <div class="numero"></div>
-                        <div class="numero"></div>
+                        <div class="numero pisca">3</div>
+                        <div class="numero">5</div>
                     </div>
                     <div class="d-1-4">
                        <p>Nome: FULANO DE TAL</p>
@@ -28,7 +29,16 @@
                         <p>Vice-Prefeito: BELTRANO DE TAL</p>
                     </div>
                 </div>
-                <div class="d-1-direita">fdfd</div>
+                <div class="d-1-direita">
+                    <div class="d-1-image">
+                        <img src="img/foto_2.jpg" alt="">
+                        Prefeito
+                    </div>
+                    <div class="d-1-image small">
+                        <img src="img/foto_4.jpg" alt="">
+                        Vice-Prefeito
+                    </div>
+                </div>
             </div>
             <div class="d-2">
                 Aperte a tela: <br>
@@ -64,5 +74,6 @@
             </div>
         </div>
     </div>
+    <script src="javascript/etapas.js"></script>
 </body>
 </html>
