--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <div class="teclado-acoes">
                     <div class="branco" onclick="branco()">BRANCO</div>
                     <div class="laranja" onclick="corrige()">CORRIGE</div>
-                    <div class="verde" onclick="confirma()">CONFIRMAR</div>
+                    <div class="verde" onclick="confirmar()">CONFIRMAR</div>
                 </div>
             </div>
         </div>
